--- a/DS4300Project3/pom.xml
+++ b/DS4300Project3/pom.xml
@@ -99,7 +99,7 @@
           <junitxml>.</junitxml>
           <filereports>TestSuiteReport.txt</filereports>
           <!-- Comma separated list of JUnit test class names to execute -->
-          <jUnitClasses>samples.AppTest</jUnitClasses>
+          <!--  <jUnitClasses>samples.KeyValueTests,samples.GraphTests</jUnitClasses>-->
         </configuration>
         <executions>
           <execution>
